making progress on signup form but username availability check no worky
