# design/media_types.go
@@ -20,6 +20,7 @@ var User = MediaType("application/vnd.cryptopages.user", func() {
 		Attribute("email")
 		Attribute("location")
 		Attribute("coins")
+		Attribute("otherCoin")
 		Attribute("jobCategory")
 		Attribute("skills")
 		Attribute("jobDescription")
@@ -34,6 +35,7 @@ var User = MediaType("application/vnd.cryptopages.user", func() {
 		Attribute("email")
 		Attribute("location")
 		Attribute("coins")
+		Attribute("otherCoin")
 		Attribute("jobCategory")
 		Attribute("skills")
 		Attribute("jobDescription")
